<resources>
    <string name="app_name">Heypet Animal Welfare</string>

    <!-- Splash -->
    <string name="splash_title">heypet.</string>
    <string name="splash_subtitle">your pet companion</string>
    <string name="cd_splash_image">Splash image</string>

    <!-- Welcome -->
    <string name="welcome_title">Welcome!</string>
    <string name="log_in_morethan"><![CDATA[Log In >]]></string>
    <string name="cd_welcome_image">Welcome image</string>

    <!-- Login -->
    <string name="login_title">One step\ncloser</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="log_in">Log In</string>
    <string name="or">Or</string>
    <string name="cd_login_image">Login image</string>
    <string name="cd_facebook_login">Login with Facebook</string>
    <string name="cd_google_login">Login with Google</string>
    <string name="cd_apple_login">Login with Apple</string>

    <!-- Signup -->
    <string name="signup_title">Let\'s Make\nOne!</string>
    <string name="sign_up">Sign Up</string>
    <string name="cd_sign_up_image">Sign Up image</string>

    <!-- On Boarding -->
    <string name="welcome">Welcome!</string>
    <string name="change_photo">Change Photo</string>
    <string name="what_do_we_call_you">What do we call you?</string>
    <string name="tell_us_about_your_buddy">What do we call your buddy?</string>
    <string name="skip">Skip</string>
    <string name="finish">Finish</string>
    <string name="cd_on_boarding_image">On Boarding image</string>

    <!-- Bottom Navigation -->
    <string name="title_main">Main</string>
    <string name="title_home">Home</string>
    <string name="title_scan">Scan</string>
    <string name="title_reminder">Reminder</string>
    <string name="title_profile">Profile</string>

    <!-- Home and Feed -->
    <string name="heypet">heypet</string>
    <string name="filter">Filter</string>
    <string name="new_post">New Post</string>
    <string name="profile_name">irene_</string>
    <string name="post_tag">Adoption</string>
    <string name="likes_number">137</string>
    <string name="read_more">Read More</string>
    <string name="cd_filter_posts">Filter posts</string>
    <string name="cd_notification_button">Open notification</string>
    <string name="cd_camera_button">Open camera</string>
    <string name="cd_post_settings">Open post settings</string>
    <string name="cd_profile_image">Profile image</string>
    <string name="cd_post_picture">Post\'s picture</string>
    <string name="cd_like_button">Like this post</string>
    <string name="cd_comment_button">See this post\'s comments</string>
    <string name="cd_bookmark_button">Bookmark this post</string>
    <string name="cd_chat_button">Open chat</string>

    <!-- Feed Filter -->
    <string name="all">All</string>
    <string name="adoption">Adoption</string>
    <string name="tips">Tips</string>
    <string name="breeding">Breeding</string>
    <string name="story">Story</string>

    <!--List Feed Category-->
    <string-array name="post_category">
        <item>Tips &#38; Trick</item>
        <item>Adoption</item>
        <item>Breeding</item>
        <item>Story</item>
    </string-array>

    <!-- Upload -->
    <string name="caption">Caption</string>
    <string name="caption_description">Your caption</string>
    <string name="category">Category</string>
    <string name="none">None</string>
    <string name="upload">Upload</string>
    <string name="gallery">Gallery</string>
    <string name="story_by_default">*Story by default</string>
    <string name="cd_picture_to_post">Picture to post</string>
    <string name="cd_gallery_button">Open gallery</string>

    <!-- Post Detail -->
    <string name="comment_content"><![CDATA[Milo is so adorable <3]]></string>
    <string name="your_comment">Your comment</string>
    <string name="send">Send</string>

    <!-- Scan -->
    <string name="camera">Camera</string>
    <string name="classified_as">Classified As</string>
    <string name="your_pet_breed"><i>Your pet breed</i></string>
    <string name="cd_picture_taken">Pet image</string>
    <string name="cd_caretips">Open identified pet\'s care tips</string>

    <!-- Care Tips -->
    <string name="breed">Breed</string>
    <string name="personality">Personality</string>
    <string name="health">Health</string>
    <string name="grooming">Grooming</string>
    <string name="how_to_take_care"><i>How to take care?</i></string>
    <string name="cd_more_tips">More tips</string>

    <!-- Reminder -->
    <string name="reminder_title">Feeds Yuuki</string>
    <string name="reminder_title_hint">Your Reminder Name</string>
    <string name="choose_a_date">Choose a Date</string>
    <string name="choose_a_time">Choose a Time</string>
    <string name="everyday">Everyday</string>
    <string name="save">Save</string>
    <string name="cd_reminder_image">Reminder image</string>
    <string name="cd_add_reminder">Add reminder</string>
    <string name="cd_add_once">Add one-set alarm reminder</string>
    <string name="cd_add_repeating">Add repeating alarm reminder</string>
    <string name="cd_delete_reminder">Delete this reminder</string>
    <string name="cd_calendar">Open calendar</string>
    <string name="cd_clock">Open clock</string>

    <!-- Profile -->
    <string name="logout">Logout</string>
    <string name="_20">20</string>
    <string name="posts">Posts</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="profile_fullname">Irene Vorger</string>
    <string name="pet_name">Yuuki</string>
    <string name="pet_dash">-</string>
    <string name="pet_breed">American Short Hair</string>
    <string name="follow">Follow</string>
    <string name="cd_back_button">Back to previous page</string>
    <string name="cd_pet_type">Pet type</string>
    <string name="cd_profile_chat_button">Chat this user</string>

    <!-- Edit Profile -->
    <string name="profile_picture">Profile picture</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="your_new_bio">Your new bio</string>
    <string name="your_buddy_s_new_bio">Your buddy\'s new name</string>
    <string name="cd_edit_profile_character">Edit profile background figure</string>

    <!-- Settings -->
    <string name="settings_title">Settings</string>
    <string name="one_time_alarm">One Time Alarm</string>
    <string name="alarm_date">Alarm Date</string>
    <string name="alarm_time">Alarm Time</string>
    <string name="set_one_time_alarm">Set One Time Alarm</string>
    <string name="alarm_message">Alarm Message</string>
    <string name="one_time_alarm_confirm">One time alarm set</string>
    <string name="repeating_alarm">Repeating Alarm</string>
    <string name="set_repeating_alarm">Set Repeating Alarm</string>
    <string name="repeating_alarm_confirm">Repeating alarm set</string>
    <string name="cancel_alarm">Cancel Alarm</string>
    <string name="cancel_alarm_confirm">Repeating alarm canceled</string>
    <string name="cd_clock_button">Choose hour and minute</string>
    <string name="cd_calendar_button">Choose date</string>

    <!-- Misc -->
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="timeout">Timeout</string>
    <string name="retry">Retry</string>
    <string name="notification">Notification</string>
    <string name="chat">Chat</string>
    <string name="reminderItem_clock">07\n30</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque tempus nibh ut ligula eleifend.</string>

</resources>