<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg_full"
    tools:context=".view.login.LoginActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_hor_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <ImageView
        android:id="@+id/img_login_character"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/login_character"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gl_hor_top"
        android:contentDescription="@string/cd_login_image" />

    <TextView
        android:id="@+id/tv_login_title"
        style="@style/Text.Bold"
        android:textSize="32sp"
        android:text="@string/login_title"
        android:layout_marginStart="64dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_login_character" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_login_title">

        <EditText
            android:id="@+id/et_username"
            style="@style/Text"
            android:layout_width="match_parent"
            android:textColor="@color/blue_pale_login_input"
            android:ems="10"
            android:hint="@string/username"
            tools:ignore="SpeakableTextPresentCheck"
            android:autofillHints="username"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@id/til_username"
        app:layout_constraintEnd_toEndOf="@id/til_username"
        app:layout_constraintTop_toBottomOf="@id/til_username"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/blue_dark_text_title">

        <EditText
            android:id="@+id/et_password"
            style="@style/Text"
            android:layout_width="match_parent"
            android:textColor="@color/blue_pale_login_input"
            android:ems="10"
            app:passwordToggleEnabled="true"
            android:hint="@string/password"
            tools:ignore="SpeakableTextPresentCheck"
            android:autofillHints="password"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_forgot_password"
        style="@style/Text"
        android:textSize="10sp"
        android:text="@string/forgot_password"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="@id/til_password"
        app:layout_constraintTop_toBottomOf="@id/til_password" />

    <TextView
        android:id="@+id/btn_login"
        style="@style/Text.Bold"
        android:textSize="16sp"
        android:textColor="@color/white_blue_login_button"
        android:text="@string/log_in"
        android:gravity="center"
        android:background="@drawable/button_login_signup"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="@id/til_username"
        app:layout_constraintEnd_toEndOf="@id/til_username"
        app:layout_constraintTop_toBottomOf="@id/tv_forgot_password" />

    <TextView
        android:id="@+id/tv_or"
        style="@style/Text"
        android:textSize="20sp"
        android:text="@string/or"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@id/til_username"
        app:layout_constraintEnd_toEndOf="@id/til_username"
        app:layout_constraintTop_toBottomOf="@id/btn_login" />

    <ImageView
        android:id="@+id/btn_facebook"
        style="@style/AlternativeLoginButton"
        android:src="@drawable/button_facebook"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@id/til_username"
        app:layout_constraintEnd_toEndOf="@id/til_username"
        app:layout_constraintTop_toBottomOf="@id/tv_or"
        android:contentDescription="@string/cd_facebook_login" />

    <ImageView
        android:id="@+id/btn_google"
        style="@style/AlternativeLoginButton"
        android:src="@drawable/button_google"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toStartOf="@id/btn_facebook"
        app:layout_constraintTop_toTopOf="@id/btn_facebook"
        app:layout_constraintBottom_toBottomOf="@id/btn_facebook"
        android:contentDescription="@string/cd_google_login" />

    <ImageView
        android:id="@+id/btn_apple"
        style="@style/AlternativeLoginButton"
        android:src="@drawable/button_apple"
        android:layout_marginStart="32dp"
        app:layout_constraintStart_toEndOf="@id/btn_facebook"
        app:layout_constraintTop_toTopOf="@id/btn_facebook"
        app:layout_constraintBottom_toBottomOf="@id/btn_facebook"
        android:contentDescription="@string/cd_apple_login" />

</androidx.constraintlayout.widget.ConstraintLayout>