<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.DetailPostActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/img_post_heart"
            android:layout_width="17dp"
            android:layout_height="17dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:alpha="0"
            android:contentDescription="@string/cd_like_button"
            android:src="@drawable/icon_heart"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_post_picture" />

        <TextView
            android:id="@+id/tv_likes_number"
            style="@style/Text"
            android:layout_marginStart="4dp"
            android:alpha="0"
            android:fontFamily="@font/lexend_medium"
            android:text="@string/likes_number"
            android:textSize="10sp"
            app:layout_constraintBottom_toBottomOf="@+id/img_post_heart"
            app:layout_constraintStart_toEndOf="@+id/img_post_heart"
            app:layout_constraintTop_toTopOf="@+id/img_post_heart" />

        <ImageView
            android:id="@+id/img_settings_icon"
            android:layout_width="19dp"
            android:layout_height="19dp"
            android:alpha="0"
            android:contentDescription="@string/cd_post_settings"
            android:src="@drawable/icon_settings_kebab"
            tools:layout_editor_absoluteX="392dp" />

        <ImageView
            android:id="@+id/img_post_comment"
            android:layout_width="17dp"
            android:layout_height="17dp"
            android:layout_marginStart="8dp"
            android:alpha="0"
            android:contentDescription="@string/cd_comment_button"
            android:src="@drawable/icon_comment"
            app:layout_constraintBottom_toBottomOf="@+id/img_post_heart"
            app:layout_constraintStart_toEndOf="@+id/tv_likes_number"
            app:layout_constraintTop_toTopOf="@+id/img_post_heart" />

        <TextView
            android:id="@+id/tv_post_description"
            style="@style/Text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="24dp"
            android:maxLines="2"
            android:text="@string/lorem_ipsum"
            android:textColor="@color/grey_dark_description"
            android:textSize="10sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_post_comment" />

        <ImageView
            android:id="@+id/img_post_bookmark"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:alpha="0"
            android:contentDescription="@string/cd_bookmark_button"
            android:src="@drawable/icon_bookmark_post"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_post_picture" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_profile_picture"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/cd_profile_image"
            android:src="@drawable/post_profile"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_profile_name"
            style="@style/Text"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/lexend_medium"
            android:text="@string/profile_name"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="@+id/img_profile_picture"
            app:layout_constraintStart_toEndOf="@+id/img_profile_picture"
            app:layout_constraintTop_toTopOf="@+id/img_profile_picture" />

        <TextView
            android:id="@+id/tv_post_tag"
            style="@style/Text"
            android:layout_marginEnd="16dp"
            android:background="@drawable/button_tag"
            android:fontFamily="@font/lexend_medium"
            android:gravity="center"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@string/post_tag"
            android:textColor="@color/white"
            android:textSize="10sp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_profile_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_profile_name" />

        <ImageView
            android:id="@+id/img_post_picture"
            android:layout_width="match_parent"
            android:layout_height="223dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/cd_post_picture"
            android:scaleType="centerCrop"
            android:src="@drawable/post_picture"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_profile_picture" />

        <TextView
            style="@style/Text.Bold"
            android:layout_width="match_parent"
            android:layout_marginStart="24dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="24dp"
            android:text="Comments"
            android:textColor="@color/grey_dark_description"
            android:textSize="10sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_post_description" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_detailPost_comments"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteY="355dp" />

</LinearLayout>