<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_light_background"
    tools:context=".view.welcome.WelcomeActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_hor_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintGuide_percent="0.1"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_welcome_title"
        style="@style/Text.Bold"
        android:fontFamily="@font/lexend_bold"
        android:text="@string/welcome_title"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gl_hor_top" />

    <ImageView
        android:id="@+id/img_welcome_character"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/cd_welcome_image"
        android:scaleType="center"
        android:src="@drawable/figure_welcome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_welcome_title" />

    <TextView
        android:id="@+id/tv_welcome_subtitle"
        style="@style/Text"
        android:layout_width="270dp"
        android:layout_height="75dp"
        android:layout_marginTop="32dp"
        android:text="@string/lorem_ipsum"
        android:textAlignment="center"
        android:textColor="@color/blue_dark_text_subtitle"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_welcome_character" />

    <TextView
        android:id="@+id/btn_login"
        style="@style/Text.Bold"
        android:layout_width="152dp"
        android:layout_height="72dp"
        android:background="@drawable/button_login"
        android:gravity="center"
        android:text="@string/log_in_morethan"
        android:textColor="@color/white_blue_login_button"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/btn_signup"
        style="@style/Text.Bold"
        android:layout_width="152dp"
        android:layout_height="72dp"
        android:gravity="center"
        android:text="@string/sign_up"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/btn_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/btn_login" />

</androidx.constraintlayout.widget.ConstraintLayout>